--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+bin/
 
 # Log file
 *.log
@@ -22,3 +23,18 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# antlr grammer codegen
+*.interp
+*.tokens
+*BaseListener.java
+*BaseVisitor.java
+*Lexer.java
+*Listener.java
+*Parser.java
+*Visitor.java
+*Runner.java
+
+# intellij project files
+.idea/
+*.iml
